# VE-LLM

./: README.md  pyproject.toml  requirements.txt  test_original_deepseek_ocr.py
deepseek_ocr_runner/: __init__.py  _utils.py  decoder.py  encoder.py  features.py
deepseek_ocr_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: e2e_image_plus_text.py  run_deepseek_ocr.py  sanity_check_features.py
md_render_pipeline/: __init__.py  batch_benchmark.py  chromium.py  config.py  e2e_smoke.py  fidelity_eval.py  html_template.py  katex_embed.py  pipeline_utils.py  render.py  render_config_default.json  render_sanity.py
md_render_pipeline/render_out/: e2e_meta.json
