[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-ocr-runner"
version = "0.1.0"
description = "Split encoder/decoder wrapper + continuous visual encoder for DeepSeek-OCR"
authors = [{ name = "VE-LLM Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "torch>=2.1",
  "Pillow>=9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepseek_ocr_runner*", "third_party*"]
exclude = ["examples*", "scripts*"]